# webservice-axum-sqlx

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yml
.sqlx/: query-4aa9d373f4d236dc0f0fa44235d31d25a45dae48657150647f9e3cd7bea52f91.json
migrations/: 20240701000000_db_setup.sql  20240701000001_initial_schema.sql
src/: app_state.rs  errors.rs  lib.rs  main.rs  routers.rs  settings.rs
src/entities/: example.rs
src/errors/: health_check_error.rs  response_error.rs
src/routers/: app_meta.rs  example.rs  fallback.rs
