[package]
name = "webservice-axum-sqlx"
version = "2.0.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
vergen-git2 = "1.0.0-beta.2"
